pie chart data - post API
